<resources>
    <string name="app_name">animalapp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">REGISTER</string>
    <string name="cofirm_password">Confirm Password</string>
    <string name="already_registerd">Already Registered?</string>
    <string name="cardiff">Cardiff</string>
    <string name="wildlife">Wildlife</string>
    <string name="links">Links</string>
    <string name="walks">Walks</string>
    <string name="maps">Maps</string>
    <string name="animals">Animals</string>
    <string name="home">Home</string>
    <string name="species_identifier">Species Identifier</string>
    <string name="show_all_animals">Show All Animals</string>
    <string name="choose_the_species_you_want_to_search_for">Choose the Species you want to search for</string>
    <string name="bird">Bird</string>
    <string name="mammal">Mammal</string>
    <string name="invertebrate">Invertebrate</string>
    <string name="amphibian_reptile">Amphibian/Reptile</string>
    <string name="name">name</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="type">Type</string>
    <string name="filter">Filter:</string>
    <string name="choose_an_head_colour_of_the_bird_you_saw">Choose an head colour of the bird you saw</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="grey">Grey</string>
    <string name="yellow">Yellow</string>
    <string name="filter2">Filter:</string>
    <string name="smaller_than_15cm">Smaller than 15cm</string>
    <string name="larger_than_15cm_but_smaller_than_30cm">Larger than 15cm but smaller than 30cm</string>
    <string name="larger_than_30cm">Larger than 30cm</string>
    <string name="result">Result:</string>
    <string name="choose_an_option_for_the_height_of_bird_you_saw">Choose an option for the height of Bird you saw</string>
    <string name="title_external_links">External Links</string>
    <string name="title_animal_menu">Animals Menu</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_walks">Walks</string>
    <string name="title_species_identifier">Species Identifier</string>
    <string name="english">English</string>
    <string name="welsh">Welsh</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="animals_seen">Animals Seen</string>
    <string name="facebook_app_id">417825229031440</string>
    <string name="fb_login_protocol_scheme">fb417825229031440</string>
    <string name="animalList">Animal List</string>
    <string name="animal_name">Animal name</string>
    <string name="description">Description</string>
    <string name="choose_image">Choose image</string>
    <string name="add">Add</string>
    <string name="animal_list">Animal List</string>
    <string name="choose_the_belly_colour_of_the_bird_you_saw">Choose the belly colour of the bird you saw</string>
    <string name="brown">Brown</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="back">Back</string>
    <string name="Skip">Skip</string>
</resources>
