<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navList"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/animals" />
    <item
        android:id="@+id/navMap"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/maps" />
    <item
        android:id="@+id/navWalk"
        android:icon="@drawable/ic_nature_people_black_24dp"
        android:title="@string/walks" />
    <item
        android:id="@+id/navLinks"
        android:icon="@drawable/ic_link_black_24dp"
        android:title="@string/links" />
</menu>