<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/pidgeons">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/eagle"/>


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="#ffffff"

        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/cofirm_password"/>



    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#000000"
        android:hint="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_reg"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/already_registerd"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/Login"
            />
    </LinearLayout>


</LinearLayout>