<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".SearchByBird.birdBellyColourFragment">

    <!-- DONE: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/choose_the_belly_colour_of_the_bird_you_saw" />

    <TextView
        android:id="@+id/filter_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:paddingBottom="20dp"
        android:text="@string/filter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/bird_colour_option_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/blue"
            android:shadowColor="@color/black"

            android:text="Blue" />

        <Button
            android:id="@+id/bird_colour_option_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/red"
            android:text="Red" />

        <Button
            android:id="@+id/bird_colour_option_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/black"
            android:text="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/bird_colour_option_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:text="@string/white"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/bird_colour_option_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/grey"
            android:text="@string/grey" />

        <Button
            android:id="@+id/bird_colour_option_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/yellow"
            android:text="@string/yellow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/bird_colour_option_brown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/brown"
            android:text="@string/brown" />

        <Button
            android:id="@+id/bird_colour_option_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/orange"
            android:text="@string/orange" />

        <Button
            android:id="@+id/bird_colour_option_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            android:textColor="@color/green"
            android:text="@string/green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/species_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:visibility="visible" />

        <Button
            android:id="@+id/species_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Skip" />
    </LinearLayout>

</LinearLayout>