<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".SearchByBird.BirdHeightFragment">

    <!-- DONE: Update blank fragment layout -->
    <TextView
        android:id="@+id/choose_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/choose_an_option_for_the_height_of_bird_you_saw" />

    <TextView
        android:id="@+id/filter_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:paddingBottom="20dp"
        android:text="@string/filter2" />

    <Button
        android:id="@+id/bird_height_option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smaller_than_15cm" />

    <Button
        android:id="@+id/bird_height_option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/larger_than_15cm_but_smaller_than_30cm" />

    <Button
        android:id="@+id/bird_height_option_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/larger_than_30cm" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/species_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Back"/>

        <Button
            android:id="@+id/species_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Skip" />
    </LinearLayout>

</LinearLayout>