<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".ChooseSpecies">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/species_choice_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/choose_the_species_you_want_to_search_for" />


    <Button
        android:id="@+id/species_bird_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bird" />

    <Button
        android:id="@+id/species_mammal_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mammal" />

    <Button
        android:id="@+id/species_reptile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <Button
        android:id="@+id/species_amphibian_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />


</LinearLayout>